[package]
name = "better_search_bot"
version = "0.1.0"
authors = ["David Evans"]
edition = "2018"

[dependencies]
serenity = { version = "0.10", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"